# api_archaeology

./: .gitignore  AGENTS.md  ETHICS.md  LEARNINGS.md  METHOD.md  PROJECT_BRIEF.md  README.md  pyproject.toml
cases/fuel-prices-mimit/: 2026-04-21-mimit-fuel-prices.md  README.md  fetch.py  parse.py  sample.csv
cases/sports-aggregator/: README.md  fetch.py  parse.py  sample.csv
cases/weather-historical/: PLAN.md  README.md  fetch.py  parse.py  sample.csv
paper/: README.md  linkedin-article.md
tests/fuel_prices_mimit/: test_parse.py
tests/weather_historical/: test_parse.py
tool/: README.md
